--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </p>
         <div class="u-video u-video-1">
           <div class="embed-responsive embed-responsive-1">
-            <iframe src="https://player.twitch.tv/?channel=ragingpenguin8604&parent=www.twitch.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
-          </div>
+            <iframe src="https://player.twitch.tv/?channel=ragingpenguin8604&parent=https://abdulqadir8604.github.io/bhyW-stream/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+          </div> 
         </div>
       </div>
     </section>
