--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="overlay-twitch-channel-name"></div>
           <iframe
             class="twitch-iframe"
-            src="https://player.twitch.tv/?channel=ragingpenguin8604&parent=127.0.0.1"
+            src="https://player.twitch.tv/?channel=ragingpenguin8604&parent=https://abdulqadir8604.github.io/bhyW-stream/"
             frameborder="0"
             allowfullscreen="true"
             scrolling="no"
