--- a/index.html
+++ b/index.html
@@ -14,24 +14,31 @@
         <h2>testing</h2>
         <h3>only for authorized person</h3>
       </header>
+      <div class="login-container">
+        <div class="login-form">
+            <h1>Login</h1>
+            <input type="text" id="username" placeholder="Username">
+            <input type="password" id="password" placeholder="Password">
+            <button id="login-button">Login</button>
+            <p id="login-error" class="error-message"></p>
+        </div>
+    </div>
       <main>
         <div class="iframe-container">
-          <div class="overlay-twitch-channel-name"></div>
           <iframe
             class="twitch-iframe"
             src="https://player.twitch.tv/?channel=ragingpenguin8604&parent=127.0.0.1"
             frameborder="0"
             allowfullscreen="true"
             scrolling="no"
-            width="600"
-            height="338"
           ></iframe>
-          <div class="overlay-twitch"></div>
+          <button id="logout-button">Logout</button>
         </div>
       </main>
       <footer>
-        <p>iLoveYou</p>
+        <p>Developed and Maintained by Abdulqadir Bhinderwala</p>
       </footer>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
