--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       <header>
         <h1>Bhayander West Relay</h1>
         <h2>testing</h2>
-        <h3>only for authorized person</h3>
       </header>
       <div class="login-container">
         <div class="login-form">
@@ -27,11 +26,13 @@
         <div class="iframe-container">
           <iframe
             class="twitch-iframe"
-            src="https://player.twitch.tv/?channel=ragingpenguin8604&parent=abdulqadir8604.github.io"
+            src="https://player.twitch.tv/?channel=ragingpenguin8604&parent=127.0.0.1"
             frameborder="0"
             allowfullscreen="true"
             scrolling="no"
           ></iframe>
+          <div class="overlay-twitch-channel-name"></div>
+          <div class="overlay-twitch"></div>
           <button id="logout-button">Logout</button>
         </div>
       </main>
