--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             allowfullscreen="true"
             scrolling="no"
           ></iframe>
+          <div class="overlay-twitch-channel-name"></div>
+          <div class="overlay-twitch"></div>
           <button id="logout-button">Logout</button>
         </div>
       </main>
