changed few things

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="iframe-container">
           <iframe
             class="twitch-iframe"
-            src="https://player.twitch.tv/?channel=ragingpenguin8604&parent=127.0.0.1"
+            src="https://player.twitch.tv/?channel=ragingpenguin8604&parent=abdulqadir8604.github.io"
             frameborder="0"
             allowfullscreen="true"
             scrolling="no"
