--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="styles.css"/>
     <title>BhyW Relay</title>
-  </head>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/mediaelement/7.0.0/mediaelementplayer.css"/>
+    <script src="https://cdn.jsdelivr.net/gh/CDNSFree2/Mediaelements.js@main/mediaelements.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@1"></script>
+</head>
 
-  <body>
-    <iframe
-  src="http://192.168.0.109:8080/embed/video/"
-  title="Owncast"
-  height="350px" width="550px"
-  referrerpolicy="origin"
-  scrolling="no"
-  allowfullscreen>
-</iframe>
-    <script src="script.js"></script>
-  </body>
+<body>
+
+  <iframe src="https://finally-central-snake.ngrok-free.app/embed/video/" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+
+<script src="script.js"></script>
+
+</body>
 </html>
